--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,6 +7,9 @@
     "heading": "Blog",
     "preparation": "Coming Soon..."
   },
+  "biography": {
+    "heading": "Biography"
+  },
   "publications": {
     "heading": "Publications",
     "conference": "Conference",
@@ -27,7 +30,7 @@
         "name": "The 16th Forum on Data Engineering and Information Management (DEIM2024)",
         "others": "Hyogo, Japan, February 28 - March 5, 2024"
       },
-      "awards": ["DEIM2024 Best Paper Award Runner-up"]
+      "awards": ["Best Paper Award Runner-up"]
     },
     "DAS2024": {
       "authors": ["Aiyi Li", "Kenya Hoshimure", "Kei Tanigaki", "Yota Hatano", "Reina Nozawa", "Yuki Sakamoto", "Yuanzhou Wei", "Naoki Chihara", "Naoki Kodani"],
@@ -72,20 +75,24 @@
     "pakdd2023-date": "[2023.05]",
     "pakdd2023": "Volunteer Award (PAKDD2023)",
     "hwip-date": "[2023.04-present]",
-    "hwip-scholarship": "Osaka University Humanware Innovation Program"
+    "hwip": "Osaka University Humanware Innovation Program",
+    "hwip-content1": "Research/Travel expenses and Grant-type scholarship"
   },
   "experiences": {
     "heading": "Experiences",
-    "nagase-date": "[2020.09-2023.03]",
-    "nagase": "Digital technology engineer at Nagase Co., Ltd.",
-    "IST-date": "[2021.06-2023.03]",
-    "IST": "Part-time job at the Graduate School of Information Science and Technology, Osaka University",
-    "IST-content1": "Assistant in the detection of variable celestial objects",
-    "TA-date": "[2023.04-2023.09]",
-    "TA": "Teaching Assistant at the School of Engineering, Osaka University",
-    "TA-content1": "Exercises in Mathematical Analysis",
-    "SANKEN-date": "[2023.06-present]",
-    "SANKEN": "Project researcher at SANKEN, Osaka University"
+    "nagase-date": "2020.09-2023.03",
+    "nagase": "Nagase Co., Ltd.",
+    "nagase-role": "Digital Technology Engineer",
+    "IST-date": "2021.06-2023.03",
+    "IST": "Graduate School of Information Science and Technology, Osaka University",
+    "IST-role": "Assistant in the detection of variable celestial objects",
+    "TA-date": "2023.04-2023.09",
+    "TA": "School of Engineering, Osaka University",
+    "TA-role": "Teaching Assistant",
+    "TA-content1": "Lessons: Exercises in Mathematical Analysis",
+    "SANKEN-date": "2023.06-present",
+    "SANKEN": "SANKEN, Osaka University",
+    "SANKEN-role": "Project researcher"
   },
   "affiliation": {
     "heading": "Affiliation",
@@ -97,18 +104,18 @@
   },
   "education": {
     "heading": "Education",
-    "secondary-date": "[2016.04-2019.03]",
+    "secondary-date": "2016.04-2019.03",
     "secondary": "High School Diploma",
     "secondary-affiliation": "Takarazuka Kita High School, Hyogo, Japan",
-    "Bachelor-date": "[2019.04-2023.03]",
+    "Bachelor-date": "2019.04-2023.03",
     "Bachelor": "B.Sc. in Engineering",
     "Bachelor-affiliation": "Osaka University, Osaka, Japan",
     "Bachelor-supervisor": "Supervisor: Prof. Makoto Onizuka",
-    "Master-date": "[2023.04-present]",
+    "Master-date": "2023.04-present",
     "Master": "M.Sc. in Information Science",
     "Master-affiliation": "Osaka University, Osaka, Japan",
     "Master-supervisor": "Supervisor: Prof. Yasushi Sakurai",
-    "Doctor-date": "[2025.04-present]",
+    "Doctor-date": "2025.04-present",
     "Doctor": "Ph.D. in Information Science",
     "Doctor-affiliation": "Osaka University, Osaka, Japan",
     "Doctor-supervisor": "Supervisor: Prof. Yasushi Sakurai"
