--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -19,7 +19,7 @@
         "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
         "others": "兵庫, 2024年2月29日~3月5日"
       },
-      "awards": ["優秀論文賞"]
+      "awards": ["優秀論文賞", "2024年度山下記念賞"]
     },
     "DAS2024": {
       "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
@@ -50,6 +50,8 @@
   },
   "grants": {
     "heading": "助成金 & 受賞",
+    "yamashita-date": "[2024年7月]",
+    "yamashita": "情報処理学会 2024年度山下記念研究賞",
     "deim2024-date": "[2024年6月]",
     "deim2024": "DEIM2024 優秀論文賞",
     "pakdd2023-date": "[2023年5月]",
