📝 docs: change venue name

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -19,7 +19,7 @@
       "authors": ["Naoki Chihara", "Yasuko Matsubara", "Ren Fujiwara", "Yasushi Sakurai"],
       "title": "Stream Mining Time-evolving Causality in Time Series",
       "venue": {
-        "name": "The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining PhD Consortium (KDDPC ’24)",
+        "name": "The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’24) PhD Consortium",
         "others": "Barcelona, Spain, August 25-29, 2024"
       },
       "awards": []
