📝 docs: remove "S" from 特任研究員S

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "title": "千原 直己",
-  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程に在籍. <br />同大学 産業科学研究所 特任研究員S. <br />ヒューマンウェアイノベーション博士課程プログラム 11期生. <br />時系列データマイニングの研究に従事しています.",
+  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程に在籍. <br />同大学 産業科学研究所 特任研究員. <br />ヒューマンウェアイノベーション博士課程プログラム 11期生. <br />時系列データマイニングの研究に従事しています.",
   "cv": "履歴書は<link_cv>こちら</link_cv>",
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "blog": {
@@ -74,7 +74,7 @@
     "TA-content1": "科目名: 数学解析演習",
     "SANKEN-date": "2023年6月-現在",
     "SANKEN": "大阪大学 産業科学研究所",
-    "SANKEN-role": "特任研究員S"
+    "SANKEN-role": "特任研究員"
   },
   "affiliation": {
     "heading": "所属",
