✨ feat: make articles posted on Zenn to be displayed on my website

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,6 +5,8 @@
   "profile": "I am a M.Sc. student at Osaka University, Japan. I am interested in time-series analysis.",
   "blog": {
     "heading": "Blog",
+    "article": "Article",
+    "book": "Book",
     "preparation": "Coming Soon..."
   },
   "biography": {
