--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -5,6 +5,8 @@
   "profile": "大阪大学大学院 情報科学研究科所属。時系列解析に関する研究に取り組んでいます。",
   "blog": {
     "heading": "ブログ",
+    "article": "記事",
+    "book": "本",
     "preparation": "準備中..."
   },
   "publications": {
