--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -53,6 +53,25 @@
       "awards": []
     }
   },
+  "news": {
+    "heading": "最新情報",
+    "dc1": "日本学術振興会特別研究員DC1に採用内定を頂きました．",
+    "dc1-date": "[2024年9月27日]",
+    "yamashita-award": "情報処理学会の2024年度山下記念研究賞を頂きました．",
+    "yamashita-award-date": "[2024年7月31日]",
+    "kddpc2024": "論文がKDD2024 PhD Consortiumに採択されました．",
+    "kddpc2024-date": "[2024年6月25日]",
+    "deim2024-award": "DEIM2024優秀論文賞を頂きました．",
+    "deim2024-award-date": "[2024年6月8日]",
+    "tod101": "論文が情報処理学会論文誌データベース(TOD)に採択されました．",
+    "tod101-date": "[2024年1月8日]",
+    "AstronComput45": "論文がAstronomy and Computingに採択されました．",
+    "AstronComput45-date": "[2023年10月25日]",
+    "bachelor-graduate": "大阪大学で学士を取得しました．",
+    "bachelor-graduate-date": "[2023年3月23日]",
+    "hwip-passing": "ヒューマンウェアイノベーション博士課程プログラムの選抜試験に合格しました．",
+    "hwip-passing-date": "[2023年3月14日]"
+  },
   "grants": {
     "heading": "助成金 & 受賞",
     "yamashita-date": "[2024年7月]",
