📝 docs: minor change

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -72,7 +72,7 @@
   },
   "news": {
     "heading": "News",
-    "dc1": "I have been preliminarily selected as a JSPS DC1 research fellow.",
+    "dc1": "I have been preliminarily selected for the JSPS DC1 Research Fellowship.",
     "dc1-date": "[2024.09.27]",
     "pandacco": "We have released an online reservation app for a local bakery (Pandacco). Check it out!",
     "pandacco-date": "[2024.09]",
