🚑 docs: revise wrong information

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -43,7 +43,7 @@
       "awards": []
     },
     "DEIM2023": {
-      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+      "authors": ["千原 直己", "髙田 唯史", "藤原 靖宏", "⻤塚 真"],
       "title": "周期解析による変動天体の検出",
       "venue": {
         "name": "第15回データ工学と情報マネジメントに関するフォーラム (DEIM2023)",
