--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -54,6 +54,8 @@
   },
   "news": {
     "heading": "最新情報",
+    "kdd2025": "論文がKDD2025に採択されました．",
+    "kdd2025-date": "[2024年11月17日]",
     "dc1": "日本学術振興会特別研究員DC1に採用内定を頂きました．",
     "dc1-date": "[2024年9月27日]",
     "yamashita-award": "情報処理学会の2024年度山下記念研究賞を頂きました．",
