♻️ refactor: add `EducationItem.tex` and `ExperiencesItem.tsx` to organize source codes structure

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -105,19 +105,19 @@
   },
   "experiences": {
     "heading": "Experiences",
-    "nagase-date": "2020.09-2023.03",
-    "nagase": "Nagase Co., Ltd.",
-    "nagase-role": "Digital Technology Engineer",
-    "IST-date": "2021.06-2023.03",
-    "IST": "Graduate School of Information Science and Technology, Osaka University",
-    "IST-role": "Assistant in the detection of variable celestial objects",
+    "SANKEN-date": "2023.06-present",
+    "SANKEN": "SANKEN, Osaka University",
+    "SANKEN-role": "Project researcher",
     "TA-date": "2023.04-2023.09",
     "TA": "School of Engineering, Osaka University",
     "TA-role": "Teaching Assistant",
     "TA-content1": "Lessons: Exercises in Mathematical Analysis",
-    "SANKEN-date": "2023.06-present",
-    "SANKEN": "SANKEN, Osaka University",
-    "SANKEN-role": "Project researcher"
+    "IST-date": "2021.06-2023.03",
+    "IST": "Graduate School of Information Science and Technology, Osaka University",
+    "IST-role": "Assistant in the detection of variable celestial objects",
+    "nagase-date": "2020.09-2023.03",
+    "nagase": "Nagase Co., Ltd.",
+    "nagase-role": "Digital Technology Engineer"
   },
   "affiliation": {
     "heading": "Affiliation",
@@ -129,21 +129,21 @@
   },
   "education": {
     "heading": "Education",
-    "secondary-date": "2016.04-2019.03",
-    "secondary": "High School Diploma",
-    "secondary-affiliation": "Takarazuka Kita High School, Hyogo, Japan",
-    "Bachelor-date": "2019.04-2023.03",
-    "Bachelor": "B.Sc. in Engineering",
-    "Bachelor-affiliation": "Osaka University, Osaka, Japan",
-    "Bachelor-supervisor": "Supervisor: Prof. Makoto Onizuka",
+    "Doctor-date": "2025.04-present",
+    "Doctor": "Ph.D. in Information Science",
+    "Doctor-affiliation": "Osaka University, Osaka, Japan",
+    "Doctor-supervisor": "Supervisor: Prof. Yasushi Sakurai",
     "Master-date": "2023.04-present",
     "Master": "M.Sc. in Information Science",
     "Master-affiliation": "Osaka University, Osaka, Japan",
     "Master-supervisor": "Supervisor: Prof. Yasushi Sakurai",
-    "Doctor-date": "2025.04-present",
-    "Doctor": "Ph.D. in Information Science",
-    "Doctor-affiliation": "Osaka University, Osaka, Japan",
-    "Doctor-supervisor": "Supervisor: Prof. Yasushi Sakurai"
+    "Bachelor-date": "2019.04-2023.03",
+    "Bachelor": "B.Sc. in Engineering",
+    "Bachelor-affiliation": "Osaka University, Osaka, Japan",
+    "Bachelor-supervisor": "Supervisor: Prof. Makoto Onizuka",
+    "secondary-date": "2016.04-2019.03",
+    "secondary": "High School Diploma",
+    "secondary-affiliation": "Takarazuka Kita High School, Hyogo, Japan"
   },
   "misc": {
     "heading": "Miscellaneous",
