--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -88,19 +88,19 @@
   },
   "experiences": {
     "heading": "職歴",
-    "nagase-date": "2020年9月-2023年3月",
-    "nagase": "株式会社ナガセ",
-    "nagase-role": "デジタル技術エンジニア",
-    "IST-date": "2021年6月-2023年3月",
-    "IST": "大阪大学 情報科学研究所",
-    "IST-role": "変動天体の探索に関する補助",
+    "SANKEN-date": "2023年6月-現在",
+    "SANKEN": "大阪大学 産業科学研究所",
+    "SANKEN-role": "特任研究員",
     "TA-date": "2023年4月-2023年9月",
     "TA": "大阪大学 工学部",
     "TA-role": "ティーチング・アシスタント (TA)",
-    "TA-content1": "科目名: 数学解析演習",
-    "SANKEN-date": "2023年6月-現在",
-    "SANKEN": "大阪大学 産業科学研究所",
-    "SANKEN-role": "特任研究員"
+    "TA-content1": "科目名：数学解析演習",
+    "IST-date": "2021年6月-2023年3月",
+    "IST": "大阪大学 情報科学研究所",
+    "IST-role": "変動天体の探索に関する補助",
+    "nagase-date": "2020年9月-2023年3月",
+    "nagase": "株式会社ナガセ",
+    "nagase-role": "デジタル技術エンジニア"
   },
   "affiliation": {
     "heading": "所属",
@@ -112,20 +112,21 @@
   },
   "education": {
     "heading": "学歴",
-    "secondary-date": "2016年4月-2019年3月",
-    "secondary": "高等学校",
-    "secondary-affiliation": "兵庫県立 宝塚北高校 普通科",
-    "Bachelor-date": "2019年4月-2023年3月",
-    "Bachelor": "学士（工学）",
-    "Bachelor-affiliation": "大阪大学 工学部 電子情報工学科",
-    "Bachelor-supervisor": "指導教員：鬼塚 真 教授",
+    "Doctor-date": "2025年4月-現在",
+    "Doctor": "博士（情報科学）",
+    "Doctor-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
+    "Doctor-supervisor": "指導教員：櫻井 保志 教授",
     "Master-date": "2023年4月-現在",
     "Master": "修士（情報科学）",
     "Master-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
     "Master-supervisor": "指導教員：櫻井 保志 教授",
-    "Doctor-date": "2025年4月-現在",
-    "Doctor": "博士（情報科学）",
-    "Doctor-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻"
+    "Bachelor-date": "2019年4月-2023年3月",
+    "Bachelor": "学士（工学）",
+    "Bachelor-affiliation": "大阪大学 工学部 電子情報工学科",
+    "Bachelor-supervisor": "指導教員：鬼塚 真 教授",
+    "secondary-date": "2016年4月-2019年3月",
+    "secondary": "高等学校",
+    "secondary-affiliation": "兵庫県立 宝塚北高校 普通科"
   },
   "misc": {
     "heading": "その他",
