--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,6 +1,6 @@
 {
   "title": "千原 直己",
-  "welcome": "大阪大学大学院 情報科学研究科 博士前期課程に在籍. <br />同大学 産業科学研究所 特任研究員. <br />ヒューマンウェアイノベーション博士課程プログラム 11期生. <br />時系列データマイニングの研究に従事しています.",
+  "welcome": "2023年4月より大阪大学大学院 情報科学研究科 博士前期課程に在籍．同大学 産業科学研究所 特任研究員．現在は、<link_yasushi>櫻井保志教授</link_yasushi>および<link_yasuko>松原靖子准教授</link_yasuko>の指導のもと研究に取り組んでいる．時系列データ中の原因と結果を意味する変数間の関係性（因果関係）を活用したデータマイニングや，大規模なデータに対する効率的な処理を可能とするためのストリームアルゴリズムに関する研究内容に興味を持つ．<link_hwip>ヒューマンウェアイノベーション博士課程プログラム</link_hwip> 11期生．2023年に大阪大学で<link_makoto>鬼塚真教授</link_makoto>の指導のもと学士を取得．",
   "cv": "履歴書は<link_cv>こちら</link_cv>",
   "name": "千原 直己",
   "blog": {
@@ -112,10 +112,6 @@
   },
   "education": {
     "heading": "学歴",
-    "Doctor-date": "2025年4月-現在",
-    "Doctor": "博士（情報科学）",
-    "Doctor-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
-    "Doctor-supervisor": "指導教員：櫻井 保志 教授",
     "Master-date": "2023年4月-現在",
     "Master": "修士（情報科学）",
     "Master-affiliation": "大阪大学 情報科学研究科 情報システム工学専攻",
