📝 docs: add acceptance rate

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,7 +22,7 @@
       "title": "Modeling Time-evolving Causality over Data Streams",
       "venue": {
         "name": "The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’25)",
-        "others": "Tronto, Canada, August 3-7, 2025"
+        "others": "Tronto, Canada, August 3-7, 2025 (acceptance rate: 19%)"
       },
       "awards": []
     },
