--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -14,43 +14,60 @@
   },
   "publications": {
     "heading": "業績一覧",
-    "conference": "学会",
-    "journal": "論文誌",
-    "patent": "特許",
-    "DEIM2024": {
-      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
-      "title": "動的モード分解を活用した高速将来予測アルゴリズム",
-      "venue": {
-        "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
-        "others": "兵庫, 2024年2月29日~3月5日"
-      },
-      "awards": ["優秀論文賞", "2024年度山下記念賞"]
+    "international-conference": {
+      "heading": "国際会議"
     },
-    "DAS2024": {
-      "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
-      "venue": {
-        "name": "第36回自律分散システム・シンポジウム",
-        "others": "東京, 2024年2月16日~2月17日"
-      },
-      "awards": []
+    "journal": {
+      "heading": "学術論文誌",
+      "TOD101": {
+        "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+        "title": "動的モード分解による時系列データストリームの将来予測",
+        "venue": {
+          "name": "情報処理学会論文誌データベース (TOD)",
+          "others": "Vol. 17, No. 2, pp. 1-11, 2024年4月23日"
+        },
+        "awards": []
+      }
     },
-    "TOD101": {
-      "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
-      "title": "動的モード分解による時系列データストリームの将来予測",
-      "venue": {
-        "name": "情報処理学会論文誌データベース (TOD)",
-        "others": "Vol. 17, No. 2, pp. 1-11, 2024年4月23日"
+    "domestic": {
+      "heading": "国内学会",
+      "DAS2024": {
+        "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
+        "venue": {
+          "name": "第36回自律分散システム・シンポジウム",
+          "others": "東京, 2024年2月16日~2月17日"
+        },
+        "awards": []
       },
-      "awards": []
+      "DEIM2024": {
+        "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
+        "title": "動的モード分解を活用した高速将来予測アルゴリズム",
+        "venue": {
+          "name": "第16回データ工学と情報マネジメントに関するフォーラム (DEIM2024)",
+          "others": "兵庫, 2024年2月29日~3月5日"
+        },
+        "awards": ["優秀論文賞", "2024年度山下記念賞"]
+      },
+      "DEIM2023": {
+        "authors": ["千原 直己", "髙田 唯史", "藤原 靖宏", "⻤塚 真"],
+        "title": "周期解析による変動天体の検出",
+        "venue": {
+          "name": "第15回データ工学と情報マネジメントに関するフォーラム (DEIM2023)",
+          "others": "岐阜, 2023年3月5日~3月9日"
+        },
+        "awards": []
+      }
     },
-    "DEIM2023": {
-      "authors": ["千原 直己", "髙田 唯史", "藤原 靖宏", "⻤塚 真"],
-      "title": "周期解析による変動天体の検出",
-      "venue": {
-        "name": "第15回データ工学と情報マネジメントに関するフォーラム (DEIM2023)",
-        "others": "岐阜, 2023年3月5日~3月9日"
-      },
-      "awards": []
+    "patent": {
+      "heading": "特許",
+      "kenshutsu2023": {
+        "authors": ["藤原 靖宏", "鬼塚 真", "千原 直己"],
+        "title": "検出装置、検出⽅法及びプログラム",
+        "tokugan": "特願2023-099796",
+        "tokkai": "",
+        "filing-date": "2023年6月19日",
+        "publication-date": ""
+      }
     }
   },
   "news": {
