🩹 chore: minor change of content

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -170,7 +170,7 @@
   "misc": {
     "heading": "Miscellaneous",
     "pandacco-date": "[2023.04-present]",
-    "pandacco": "Developed online reservation app for local bakery (Pandacco)",
+    "pandacco": "Developed online reservation app for local bakery (Pandacco) at Google Developer Student Clubs (GDSC)",
     "pakdd2023-date": "[2023.05]",
     "pakdd2023": "Participated in PAKDD2023 as volunteer",
     "pigicon2023-date": "[2023.12]",
