--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -144,7 +144,7 @@
   "misc": {
     "heading": "その他",
     "pandacco-date": "[2023年3月-現在]",
-    "pandacco": "地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属",
+    "pandacco": "GDSCの地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属",
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
     "pigicon2023-date": "[2023年12月]",
