--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -15,7 +15,9 @@
   "publications": {
     "heading": "業績一覧",
     "international-conference": {
-      "heading": "国際会議"
+      "heading": "国際会議",
+      "KDD2025": {},
+      "KDDPC2024": {}
     },
     "journal": {
       "heading": "学術論文誌",
@@ -27,18 +29,11 @@
           "others": "Vol. 17, No. 2, pp. 1-11, 2024年4月23日"
         },
         "awards": []
-      }
+      },
+      "AstronComput45": {}
     },
     "domestic": {
       "heading": "国内学会",
-      "DAS2024": {
-        "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
-        "venue": {
-          "name": "第36回自律分散システム・シンポジウム",
-          "others": "東京, 2024年2月16日~2月17日"
-        },
-        "awards": []
-      },
       "DEIM2024": {
         "authors": ["千原 直己", "松原 靖子", "藤原 廉", "櫻井 保志"],
         "title": "動的モード分解を活用した高速将来予測アルゴリズム",
@@ -47,6 +42,14 @@
           "others": "兵庫, 2024年2月29日~3月5日"
         },
         "awards": ["優秀論文賞", "2024年度山下記念賞"]
+      },
+      "DAS2024": {
+        "authors": ["李 艾義", "星牟禮 健也", "谷垣 慶", "波多野 遥太", "能澤 伶奈", "坂本 有紀", "韋 遠舟", "千原 直己", "小谷 尚輝"],
+        "venue": {
+          "name": "第36回自律分散システム・シンポジウム",
+          "others": "東京, 2024年2月16日~2月17日"
+        },
+        "awards": []
       },
       "DEIM2023": {
         "authors": ["千原 直己", "髙田 唯史", "藤原 靖宏", "⻤塚 真"],
@@ -97,8 +100,6 @@
     "yamashita": "情報処理学会 2024年度山下記念研究賞",
     "deim2024-date": "[2024年6月]",
     "deim2024": "DEIM2024 優秀論文賞",
-    "pakdd2023-date": "[2023年5月]",
-    "pakdd2023": "Volunteer Award (PAKDD2023)",
     "hwip-date": "[2023年4月-現在]",
     "hwip": "ヒューマンウェアイノベーション博士課程プログラム",
     "hwip-content1": "研究活動経費、国内出張旅費、給付型奨学金 etc."
