--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,8 +1,8 @@
 {
-  "title": "千原 直己",
+  "name": "千原 直己",
+  "title": "トップページ",
   "profile-text": "2023年4月より大阪大学大学院 情報科学研究科 博士前期課程に在籍．同大学 産業科学研究所 特任研究員．現在は、<link_yasushi>櫻井保志教授</link_yasushi>および<link_yasuko>松原靖子准教授</link_yasuko>の指導のもと研究に取り組んでいる．時系列データ中の原因と結果を意味する変数間の関係性（因果関係）を活用したデータマイニングや，大規模なデータに対する効率的な処理を可能とするためのストリームアルゴリズムに関する研究内容に興味を持つ．<link_hwip>ヒューマンウェアイノベーション博士課程プログラム</link_hwip> 11期生．2023年に大阪大学で<link_makoto>鬼塚真教授</link_makoto>の指導のもと学士を取得．",
   "cv": "履歴書は<link_cv>こちら</link_cv>",
-  "name": "千原 直己",
   "blog": {
     "heading": "ブログ",
     "article": "記事",
@@ -94,7 +94,7 @@
     "hwip-passing": "ヒューマンウェアイノベーション博士課程プログラムの選抜試験に合格しました．",
     "hwip-passing-date": "[2023年3月14日]"
   },
-  "grants": {
+  "grants-awards": {
     "heading": "助成金 & 受賞",
     "yamashita-date": "[2024年7月]",
     "yamashita": "情報処理学会 2024年度山下記念研究賞",
