📝 docs: correct the order of content json files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -167,12 +167,12 @@
   },
   "misc": {
     "heading": "Miscellaneous",
-    "pandacco-date": "[2023.04-present]",
-    "pandacco": "Developed online reservation app for local bakery (Pandacco) at Google Developer Student Clubs (GDSC)",
+    "pigicon2023-date": "[2023.12]",
+    "pigicon2023": "Second-place award at the 2nd Recruit Programming Contest (PIGICON2023)",
     "pakdd2023-date": "[2023.05]",
     "pakdd2023": "Participated in PAKDD2023 as volunteer",
-    "pigicon2023-date": "[2023.12]",
-    "pigicon2023": "Second-place award at the 2nd Recruit Programming Contest (PIGICON2023)"
+    "pandacco-date": "[2023.04-present]",
+    "pandacco": "Developed online reservation app for local bakery (Pandacco) at Google Developer Student Clubs (GDSC)"
   },
   "contact": {
     "heading": "Contact me",
