--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -144,12 +144,12 @@
   },
   "misc": {
     "heading": "その他",
-    "pandacco-date": "[2023年3月-現在]",
-    "pandacco": "GDSCの地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属",
+    "pigicon2023-date": "[2023年12月]",
+    "pigicon2023": "第2回リクルートプログラミングコンテスト (PIGICON2023) 準優勝",
     "pakdd2023-date": "[2023年5月]",
     "pakdd2023": "PAKDD2023に運営ボランティアとして参加",
-    "pigicon2023-date": "[2023年12月]",
-    "pigicon2023": "第2回リクルートプログラミングコンテスト (PIGICON2023) 準優勝"
+    "pandacco-date": "[2023年3月-現在]",
+    "pandacco": "GDSCの地元のパン屋 (パンダッコ) 用予約アプリの開発チームに所属"
   },
   "contact": {
     "heading": "お問い合わせ",
