📝 docs: add patent information

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -89,9 +89,9 @@
       "kenshutsu2023": {
         "authors": ["Yasuhiro Fujiwara", "Makoto Onizuka", "Naoki Chihara"],
         "tokugan": "特願2023-099796",
-        "tokkai": "",
+        "tokkai": "特開2025-000129",
         "filing-date": "2023.06.19",
-        "publication-date": ""
+        "publication-date": "2025.01.07"
       }
     }
   },
