--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -67,9 +67,9 @@
         "authors": ["藤原 靖宏", "鬼塚 真", "千原 直己"],
         "title": "検出装置、検出⽅法及びプログラム",
         "tokugan": "特願2023-099796",
-        "tokkai": "",
+        "tokkai": "特開2025-000129",
         "filing-date": "2023年6月19日",
-        "publication-date": ""
+        "publication-date": "2025年1月7日"
       }
     }
   },
