--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -75,9 +75,11 @@
   },
   "news": {
     "heading": "最新情報",
+    "boost": "国立研究開発法人科学技術振興機構 (JST) の次世代AI人材育成プロジェクト (BOOST) に採択されました．",
+    "boost-date": "[2025年2月20日]",
     "kdd2025": "論文がKDD2025に採択されました．",
     "kdd2025-date": "[2024年11月17日]",
-    "dc1": "日本学術振興会特別研究員DC1に採用内定を頂きました．",
+    "dc1": "日本学術振興会 (JSPS) の特別研究員DC1に採用内定を頂きました．",
     "dc1-date": "[2024年9月27日]",
     "yamashita-award": "情報処理学会の2024年度山下記念研究賞を頂きました．",
     "yamashita-award-date": "[2024年7月31日]",
@@ -85,7 +87,7 @@
     "kddpc2024-date": "[2024年6月25日]",
     "deim2024-award": "DEIM2024優秀論文賞を頂きました．",
     "deim2024-award-date": "[2024年6月8日]",
-    "tod101": "論文が情報処理学会論文誌データベース(TOD)に採択されました．",
+    "tod101": "論文が情報処理学会論文誌データベース (TOD) に採択されました．",
     "tod101-date": "[2024年1月8日]",
     "AstronComput45": "論文がAstronomy and Computingに採択されました．",
     "AstronComput45-date": "[2023年10月25日]",
